slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  labels:
    app: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - port: 50000
      targetPort: 50000
      nodePort: 50000      # 👈 You can change this (range: 30000–32767)
      name: agent
