ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.nycx.in     # 👈 your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-clusterip
                port:
                  number: 8080
